Change to a library, add another project for compiling CLI environment

--- a/libmc4/CPUEmulator.vcxproj
+++ b/libmc4/CPUEmulator.vcxproj
@@ -24,10 +24,11 @@
     <ProjectGuid>{a22fd581-7389-4ece-abbb-60d7f54a6901}</ProjectGuid>
     <RootNamespace>CPUEmulator</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>libmc4</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -140,6 +141,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="emu.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="emu.h" />
+    <ClInclude Include="instructions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
