--- a/mc4-cli/mc4-cli.vcxproj.filters
+++ b/mc4-cli/mc4-cli.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="emu.c">
+    <ClCompile Include="mc4cli.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
