Refactor a lot of stuff to accommodate a new "bus" system; this makes memory-mapping things a lot easier

--- a/libmc4/CPUEmulator.vcxproj
+++ b/libmc4/CPUEmulator.vcxproj
@@ -41,7 +41,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -140,9 +140,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bus.c" />
     <ClCompile Include="emu.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bus.h" />
     <ClInclude Include="emu.h" />
     <ClInclude Include="instructions.h" />
   </ItemGroup>
